[gd_scene load_steps=33 format=2]

[ext_resource path="res://assets/textures/secret-key.png" type="Texture" id=1]
[ext_resource path="res://actors/interactables/secret-key/base-nodes/inner-particle.tscn" type="PackedScene" id=2]
[ext_resource path="res://actors/interactables/secret-key/base-nodes/center-particles.gd" type="Script" id=3]
[ext_resource path="res://actors/interactables/secret-key/base-nodes/secret-key.gd" type="Script" id=4]
[ext_resource path="res://actors/interactables/secret-key/base-nodes/hit-particles.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/textures/robot.v1.png" type="Texture" id=6]
[ext_resource path="res://actors/interactables/secret-key/base-nodes/ray.gd" type="Script" id=7]
[ext_resource path="res://actors/interactables/secret-key/base-nodes/outer-particle.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/shader-effects/ripple-source/ripple-source.tscn" type="PackedScene" id=9]
[ext_resource path="res://actors/interactables/secret-key/base-nodes/white-transition.tscn" type="PackedScene" id=10]
[ext_resource path="res://actors/interactables/secret-key/base-nodes/black-transition.tscn" type="PackedScene" id=11]
[ext_resource path="res://ui/speedrun-screens/finish.tscn" type="PackedScene" id=12]
[ext_resource path="res://ui/ending-screen/ending-screen.tscn" type="PackedScene" id=13]
[ext_resource path="res://ui/secret-keys-screen/secret-keys-screen.tscn" type="PackedScene" id=14]
[ext_resource path="res://ui/ending-screen/secret-ending-screen.tscn" type="PackedScene" id=15]
[ext_resource path="res://assets/sound-effects/secret-key/phase4B.ogg" type="AudioStream" id=16]
[ext_resource path="res://assets/sound-effects/secret-key/phase3A.ogg" type="AudioStream" id=17]
[ext_resource path="res://assets/sound-effects/secret-key/phase2A.ogg" type="AudioStream" id=18]
[ext_resource path="res://assets/sound-effects/secret-key/phase2B.ogg" type="AudioStream" id=19]
[ext_resource path="res://assets/sound-effects/secret-key/phase1A.ogg" type="AudioStream" id=20]
[ext_resource path="res://assets/sound-effects/secret-key/phase1B.ogg" type="AudioStream" id=21]
[ext_resource path="res://assets/sound-effects/secret-key/phase3B.ogg" type="AudioStream" id=22]
[ext_resource path="res://assets/sound-effects/secret-key/final.ogg" type="AudioStream" id=23]
[ext_resource path="res://assets/sound-effects/secret-key/phase4A.ogg" type="AudioStream" id=24]
[ext_resource path="res://assets/sound-effects/secret-key/particles.ogg" type="AudioStream" id=25]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 14 )

[sub_resource type="Animation" id=2]
resource_name = "Anim0"
length = 2.0
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0, 1, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, -2 ), Vector2( 0, -1 ), Vector2( 0, 0 ), Vector2( 0, 1 ), Vector2( 0, 2 ), Vector2( 0, 1 ), Vector2( 0, 0 ), Vector2( 0, -1 ), Vector2( 0, -2 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Anim1"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -1 ), Vector2( 0, 1 ), Vector2( 0, -1 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("Sprite/InnerCenterParticles")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "turn_on"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "start_phase_1"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "Anim2"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 5.45411e-09 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "start_phase_2"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("Sprite/InnerCenterParticles")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "accelerate"
} ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 24.0, 4.0 ],
"method": "shake_screen"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "Anim3"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "start_phase_3"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("Sprite/OuterCenterParticles")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "turn_on"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 36.0, 3.0 ],
"method": "shake_screen"
} ]
}

[sub_resource type="Animation" id=6]
resource_name = "Anim4"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Sprite/OuterCenterParticles")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "accelerate"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "start_phase_4"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 36.0, 2.0 ],
"method": "shake_screen"
} ]
}

[sub_resource type="Animation" id=7]
resource_name = "Anim5"
length = 2.0
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "pause_player"
} ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "spawn_white_transition"
}, {
"args": [  ],
"method": "spawn_black_transition"
}, {
"args": [  ],
"method": "go_to_next_level"
} ]
}

[node name="SecretKey" type="StaticBody2D"]
z_index = -1
collision_layer = 4
collision_mask = 4
script = ExtResource( 4 )
hit_particles = ExtResource( 5 )
white_transition = ExtResource( 10 )
black_transition = ExtResource( 11 )
secret_keys_scene = ExtResource( 14 )
end_scene = ExtResource( 13 )
secret_end_scene = ExtResource( 15 )
speedrun_finish = ExtResource( 12 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -1 )
texture = ExtResource( 1 )
vframes = 2
hframes = 3
frame = 2

[node name="InnerCenterParticles" type="Node2D" parent="Sprite"]
position = Vector2( 0, -1 )
script = ExtResource( 3 )
distance = 14.0
particle = ExtResource( 2 )

[node name="OuterCenterParticles" type="Node2D" parent="Sprite"]
script = ExtResource( 3 )
distance = 25.0
particle = ExtResource( 8 )

[node name="Phase2TopParticles" type="Node2D" parent="Sprite"]
z_index = -1

[node name="Phase2TopRightParticle" type="CPUParticles2D" parent="Sprite/Phase2TopParticles"]
position = Vector2( 7, -8 )
emitting = false
lifetime = 0.8
randomness = 1.0
lifetime_randomness = 0.5
local_coords = false
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector2( 0.3, -1 )
spread = 10.0
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
color = Color( 1, 0.309804, 0.470588, 1 )

[node name="Phase2TopLeftParticle" type="CPUParticles2D" parent="Sprite/Phase2TopParticles"]
position = Vector2( -7, -8 )
emitting = false
lifetime = 0.8
randomness = 1.0
lifetime_randomness = 0.5
local_coords = false
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector2( -0.3, -1 )
spread = 10.0
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
color = Color( 1, 0.309804, 0.470588, 1 )

[node name="Phase2BottomParticles" type="Node2D" parent="Sprite"]
z_index = -1

[node name="Phase2BotLeftParticle" type="CPUParticles2D" parent="Sprite/Phase2BottomParticles"]
position = Vector2( -8, 12 )
emitting = false
amount = 6
lifetime = 0.12
randomness = 1.0
local_coords = false
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector2( -0.3, 1 )
spread = 10.0
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
color = Color( 1, 0.309804, 0.470588, 1 )

[node name="Phase2BotLeftParticle2" type="CPUParticles2D" parent="Sprite/Phase2BottomParticles"]
position = Vector2( -11, 24 )
emitting = false
amount = 6
lifetime = 0.4
randomness = 1.0
lifetime_randomness = 0.5
local_coords = false
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector2( -0.3, -0.04 )
spread = 10.0
gravity = Vector2( 0, 50 )
initial_velocity = 100.0
color = Color( 1, 0.309804, 0.470588, 1 )

[node name="Phase2BotRightParticle" type="CPUParticles2D" parent="Sprite/Phase2BottomParticles"]
position = Vector2( 8, 12 )
emitting = false
amount = 6
lifetime = 0.12
randomness = 1.0
local_coords = false
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector2( 0.3, 1 )
spread = 10.0
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
color = Color( 1, 0.309804, 0.470588, 1 )

[node name="Phase2BotRightParticle2" type="CPUParticles2D" parent="Sprite/Phase2BottomParticles"]
position = Vector2( 11, 24 )
emitting = false
amount = 6
lifetime = 0.4
randomness = 1.0
lifetime_randomness = 0.5
local_coords = false
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector2( 0.3, -0.04 )
spread = 10.0
gravity = Vector2( 0, 50 )
initial_velocity = 100.0
color = Color( 1, 0.309804, 0.470588, 1 )

[node name="Phase2BotMidParticle" type="CPUParticles2D" parent="Sprite/Phase2BottomParticles"]
position = Vector2( 0, 12 )
emitting = false
amount = 6
lifetime = 0.12
randomness = 1.0
local_coords = false
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector2( 0, 1 )
spread = 10.0
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
color = Color( 1, 0.309804, 0.470588, 1 )

[node name="Phase2BotMidParticle2" type="CPUParticles2D" parent="Sprite/Phase2BottomParticles"]
position = Vector2( 0, 24 )
emitting = false
amount = 3
lifetime = 0.4
randomness = 1.0
lifetime_randomness = 0.5
local_coords = false
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector2( -0.3, -0.04 )
spread = 10.0
gravity = Vector2( 0, 50 )
initial_velocity = 100.0
color = Color( 1, 0.309804, 0.470588, 1 )

[node name="Phase2BotMidParticle3" type="CPUParticles2D" parent="Sprite/Phase2BottomParticles"]
position = Vector2( 0, 24 )
emitting = false
amount = 3
lifetime = 0.4
randomness = 1.0
lifetime_randomness = 0.5
local_coords = false
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector2( 0.3, -0.04 )
spread = 10.0
gravity = Vector2( 0, 50 )
initial_velocity = 100.0
color = Color( 1, 0.309804, 0.470588, 1 )

[node name="EnergyRays" type="Node2D" parent="Sprite"]
visible = false

[node name="LeftRay" type="Sprite" parent="Sprite/EnergyRays"]
position = Vector2( -8, 0 )
rotation = 1.5708
z_index = -1
texture = ExtResource( 6 )
hframes = 3
region_enabled = true
region_rect = Rect2( 0, 128, 48, 16 )
script = ExtResource( 7 )

[node name="Timer" type="Timer" parent="Sprite/EnergyRays/LeftRay"]
wait_time = 0.1
one_shot = true
autostart = true

[node name="RightRay" type="Sprite" parent="Sprite/EnergyRays"]
position = Vector2( 8, 0 )
rotation = 1.5708
z_index = -1
texture = ExtResource( 6 )
hframes = 3
region_enabled = true
region_rect = Rect2( 0, 128, 48, 16 )
script = ExtResource( 7 )

[node name="Timer" type="Timer" parent="Sprite/EnergyRays/RightRay"]
wait_time = 0.1
one_shot = true
autostart = true

[node name="Phase3TopParticles" type="Node2D" parent="Sprite"]
z_index = -1

[node name="Particles" type="CPUParticles2D" parent="Sprite/Phase3TopParticles"]
position = Vector2( 0, -8 )
emitting = false
amount = 16
lifetime = 0.8
lifetime_randomness = 0.75
local_coords = false
emission_shape = 2
emission_rect_extents = Vector2( 5, 5 )
direction = Vector2( 0, -1 )
spread = 5.0
gravity = Vector2( 0, 0 )
initial_velocity = 200.0
color = Color( 1, 0.309804, 0.470588, 1 )

[node name="Particles2" type="CPUParticles2D" parent="Sprite/Phase3TopParticles"]
position = Vector2( 0, -8 )
emitting = false
amount = 12
lifetime = 0.4
emission_shape = 2
emission_rect_extents = Vector2( 2, 5 )
direction = Vector2( 0, -1 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 300.0
scale_amount = 2.0
color = Color( 1, 0.309804, 0.470588, 1 )

[node name="Particles3" type="CPUParticles2D" parent="Sprite/Phase3TopParticles"]
position = Vector2( 0, -8 )
emitting = false
amount = 9
lifetime = 1.5
lifetime_randomness = 0.75
local_coords = false
emission_shape = 2
emission_rect_extents = Vector2( 8, 5 )
direction = Vector2( 0, -1 )
spread = 15.0
gravity = Vector2( 0, 300 )
initial_velocity = 250.0
initial_velocity_random = 0.3
color = Color( 1, 0.309804, 0.470588, 1 )

[node name="Particles4" type="CPUParticles2D" parent="Sprite/Phase3TopParticles"]
position = Vector2( 0, -8 )
emitting = false
amount = 6
lifetime = 0.2
lifetime_randomness = 0.7
emission_shape = 2
emission_rect_extents = Vector2( 1, 5 )
direction = Vector2( 0, -1 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 300.0
scale_amount = 2.0
color = Color( 0.956863, 0.956863, 0.894118, 1 )

[node name="Phase4BottomParticles" type="Node2D" parent="Sprite"]
z_index = -1

[node name="Particles" type="CPUParticles2D" parent="Sprite/Phase4BottomParticles"]
position = Vector2( 0, 8 )
emitting = false
amount = 9
lifetime = 0.07
local_coords = false
emission_shape = 2
emission_rect_extents = Vector2( 5, 5 )
direction = Vector2( 0, 1 )
spread = 5.0
gravity = Vector2( 0, 0 )
initial_velocity = 200.0
color = Color( 1, 0.309804, 0.470588, 1 )

[node name="Particles5" type="CPUParticles2D" parent="Sprite/Phase4BottomParticles"]
position = Vector2( 0, 24 )
emitting = false
amount = 6
lifetime = 0.12
lifetime_randomness = 0.3
emission_shape = 2
emission_rect_extents = Vector2( 2, 2 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 300.0
scale_amount = 2.0
color = Color( 1, 0.309804, 0.470588, 1 )

[node name="Particles6" type="CPUParticles2D" parent="Sprite/Phase4BottomParticles"]
position = Vector2( 0, 24 )
emitting = false
amount = 6
lifetime = 0.12
lifetime_randomness = 0.3
emission_shape = 2
emission_rect_extents = Vector2( 2, 2 )
direction = Vector2( -1, 0 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 300.0
scale_amount = 2.0
color = Color( 1, 0.309804, 0.470588, 1 )

[node name="Particles2" type="CPUParticles2D" parent="Sprite/Phase4BottomParticles"]
position = Vector2( 0, 8 )
emitting = false
amount = 6
lifetime = 0.05
lifetime_randomness = 0.7
emission_shape = 2
emission_rect_extents = Vector2( 2, 5 )
direction = Vector2( 0, 1 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 300.0
scale_amount = 2.0
color = Color( 0.956863, 0.956863, 0.894118, 1 )

[node name="Particles3" type="CPUParticles2D" parent="Sprite/Phase4BottomParticles"]
position = Vector2( 0, 24 )
emitting = false
amount = 5
lifetime = 0.05
lifetime_randomness = 0.7
emission_shape = 2
emission_rect_extents = Vector2( 1, 1 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 300.0
scale_amount = 2.0
color = Color( 0.956863, 0.956863, 0.894118, 1 )

[node name="Particles4" type="CPUParticles2D" parent="Sprite/Phase4BottomParticles"]
position = Vector2( 0, 24 )
emitting = false
amount = 5
lifetime = 0.05
lifetime_randomness = 0.7
emission_shape = 2
emission_rect_extents = Vector2( 1, 1 )
direction = Vector2( -1, 0 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 300.0
scale_amount = 2.0
color = Color( 0.956863, 0.956863, 0.894118, 1 )

[node name="Particles7" type="CPUParticles2D" parent="Sprite/Phase4BottomParticles"]
position = Vector2( 4, 24 )
emitting = false
amount = 4
lifetime = 0.7
lifetime_randomness = 0.75
local_coords = false
direction = Vector2( 1, -0.5 )
spread = 15.0
gravity = Vector2( 0, 300 )
initial_velocity = 250.0
initial_velocity_random = 0.3
color = Color( 1, 0.309804, 0.470588, 1 )

[node name="Particles8" type="CPUParticles2D" parent="Sprite/Phase4BottomParticles"]
position = Vector2( -4, 24 )
emitting = false
amount = 12
lifetime = 0.7
lifetime_randomness = 0.75
local_coords = false
direction = Vector2( -1, -0.5 )
spread = 15.0
gravity = Vector2( 0, 300 )
initial_velocity = 250.0
initial_velocity_random = 0.3
color = Color( 1, 0.309804, 0.470588, 1 )

[node name="Particles9" type="CPUParticles2D" parent="Sprite/Phase4BottomParticles"]
position = Vector2( 4, 24 )
emitting = false
lifetime = 0.7
lifetime_randomness = 0.5
local_coords = false
emission_shape = 2
emission_rect_extents = Vector2( 2, 2 )
direction = Vector2( 1, -0.15 )
spread = 8.0
initial_velocity = 300.0
initial_velocity_random = 0.5
color = Color( 1, 0.309804, 0.470588, 1 )

[node name="Particles10" type="CPUParticles2D" parent="Sprite/Phase4BottomParticles"]
position = Vector2( -4, 24 )
emitting = false
lifetime = 0.7
lifetime_randomness = 0.5
local_coords = false
emission_shape = 2
emission_rect_extents = Vector2( 2, 2 )
direction = Vector2( -1, -0.15 )
spread = 8.0
initial_velocity = 300.0
initial_velocity_random = 0.5
color = Color( 1, 0.309804, 0.470588, 1 )

[node name="RippleSource" parent="Sprite" instance=ExtResource( 9 )]
z_index = -2
radius = 1.0

[node name="Hitbox" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 2 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Anim0 = SubResource( 2 )
anims/Anim1 = SubResource( 3 )
anims/Anim2 = SubResource( 4 )
anims/Anim3 = SubResource( 5 )
anims/Anim4 = SubResource( 6 )
anims/Anim5 = SubResource( 7 )

[node name="PARTICLES" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 25 )
volume_db = -9.0
bus = "SFX"

[node name="PHASE1A" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )
volume_db = -12.0
bus = "SFX"

[node name="PHASE1B" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 21 )
volume_db = -12.0
bus = "SFX"

[node name="PHASE2A" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )
volume_db = -12.0
bus = "SFX"

[node name="PHASE2B" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )
volume_db = -15.0
bus = "SFX"

[node name="PHASE3A" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )
volume_db = -12.0
bus = "SFX"

[node name="PHASE3B" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 22 )
volume_db = -12.0
bus = "SFX"

[node name="PHASE4A" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 24 )
volume_db = -12.0
mix_target = 2
bus = "SFX"

[node name="PHASE4B" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
volume_db = -9.0
bus = "SFX"

[node name="FINAL" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 23 )
volume_db = -3.0
bus = "REVERB"

[node name="FadeOut" type="Tween" parent="."]
[connection signal="timeout" from="Sprite/EnergyRays/LeftRay/Timer" to="Sprite/EnergyRays/LeftRay" method="_on_Timer_timeout"]
[connection signal="timeout" from="Sprite/EnergyRays/RightRay/Timer" to="Sprite/EnergyRays/RightRay" method="_on_Timer_timeout"]
[connection signal="finished" from="PHASE1A" to="." method="_on_PHASE1A_finished"]
[connection signal="finished" from="PHASE2A" to="." method="_on_PHASE2A_finished"]
[connection signal="finished" from="PHASE3A" to="." method="_on_PHASE3A_finished"]
[connection signal="finished" from="PHASE4A" to="." method="_on_PHASE4A_finished"]
